# carmasearchv_b

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.production  README.md  env.website.example  middleware.ts  next.config.production.js  package.json
RankingMODEL/autoscout-ml/: Dockerfile.backfill  Dockerfile.flask  Dockerfile.valuation  deploy-valuation.sh  deploy.sh  requirements_flask.txt
ShippingAPI/: GLOBAL_TRADE_DATABASE_README.md  README.md  VEHICLE_DATA_CLEANING_REPORT.md  env.example  global_trade_sqlite_schema.sql  pyproject.toml  start_vice.sh  vice_standalone.html
app/: globals.css  layout.tsx  page.tsx
app/account/: account-form.tsx  page.tsx
app/actions/: send-email.ts
app/alerts/: page.tsx
app/b/: page.tsx
components/: add-alert-modal.tsx  add-payment-method-modal.tsx  add-service-record-form.tsx  add-vehicle-modal.tsx  add-vehicle-wizard.tsx  alert-list.tsx  auth-modal-b.tsx  auth-modal.tsx  compare-modal.tsx  contact-form.tsx  empty-portfolio-state.tsx  loading-spinner.tsx  logo-scroll-wheel.tsx  market-insights.tsx  mobile-menu-b.tsx  mobile-menu.tsx  portfolio-summary.tsx  price-alert-modal.tsx  price-notification.tsx  simple-add-vehicle-modal.tsx  submit-button.tsx  vehicle-details-modal.tsx  vehicle-list.tsx  vehicle-media-section.tsx
hooks/: use-auth.ts  use-portfolio.ts  use-service-records.ts  use-valuation-history.ts  use-vehicle-media.ts  use-vehicle-specs.ts
lib/: api.ts  portfolio-api.ts
monitoring/: main.tf  outputs.tf  variables.tf
sql/: portfolio_setup.sql  profile_setup.sql
tasks/: todo.md
types/: portfolio.ts
(+21 files in other folders)
